Some minor fixes